// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render multiple expenses with plural expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totalling 
    $9.00
    .
  </h2>
</div>
`;

exports[`should render single expense singularily 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $3.00
    .
  </h2>
</div>
`;
